gcc/ChangeLog 	Backport from mainline 	2012-10-23  Terry Guo  <terry.guo@arm.com>

PR target/55019
	* config/arm/arm.c (thumb1_expand_prologue): Don't push high regs with
	live argument regs.

	gcc/testsuite/ChangeLog
	Backport from mainline
	2012-10-23  Terry Guo  <terry.guo@arm.com>

	PR target/55019
	* gcc.dg/pr55019.c: New.

From-SVN: r192831